<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/horizontal_margin_half"
        android:paddingBottom="@dimen/horizontal_margin_half"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/volume_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/horizontal_margin_quarter"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorPrimary"
                android:singleLine="true"
                android:textSize="16sp"
                tools:text="P"
                />

            <TextView
                android:id="@+id/audio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/horizontal_margin_quarter"
                android:layout_toEndOf="@id/volume_type"
                android:layout_toStartOf="@+id/button_audio_delete"
                tools:text="@string/play_pane_title"
                android:textColor="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/button_audio_delete"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/vertical_margin_quarter"
                android:paddingBottom="@dimen/vertical_margin_quarter"
                android:paddingStart="@dimen/horizontal_margin_half"
                android:paddingEnd="@dimen/horizontal_margin_half"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_delete_white"
                android:layout_toStartOf="@+id/button_audio_play"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:contentDescription="@string/audio_play_content_desc" />

            <ImageButton
                android:id="@+id/button_audio_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/vertical_margin_quarter"
                android:paddingBottom="@dimen/vertical_margin_quarter"
                android:paddingStart="@dimen/horizontal_margin_half"
                android:paddingEnd="@dimen/horizontal_margin_half"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_play_arrow_white"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:contentDescription="@string/audio_play_content_desc" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/audio_output_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_output"
                style="@style/AudioTitleTheme"/>

            <Spinner
                android:id="@+id/audio_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/audio_output_title"
                style="@style/AudioTitleTheme"
                tools:listitem="@android:layout/simple_spinner_item">
            </Spinner>

            <TextView
                android:id="@+id/audio_title_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/audio_output"
                android:layout_toStartOf="@+id/button_vol_minus"
                android:gravity="end"
                android:layout_centerVertical="true"
                android:text="@string/title_volume"
                style="@style/AudioTitleTheme"/>

            <ImageButton
                android:id="@+id/button_vol_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_quarter"
                android:layout_marginEnd="@dimen/horizontal_margin_quarter"
                android:layout_toStartOf="@+id/button_vol_plus"
                android:src="@drawable/ic_volume_down_white"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/audio_vol_down_content_desc" />

            <ImageButton
                android:id="@+id/button_vol_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_quarter"
                android:layout_marginEnd="@dimen/horizontal_margin_quarter"
                android:src="@drawable/ic_volume_up_white"
                android:layout_toStartOf="@+id/button_vol_mute"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/audio_vol_up_content_desc" />

            <ImageButton
                android:id="@+id/button_vol_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_quarter"
                android:layout_marginEnd="@dimen/horizontal_margin_quarter"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_volume_mute_white"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/audio_vol_mute_content_desc" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>